test/conformance/chainsaw/verify-images/clusterpolicy/standard/registry-egress-hard-block/metadata-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry-egress-metadata
  labels:
    test.kyverno.io/registry-egress: hard-block
spec:
  containers:
  - name: metadata
    image: 169.254.169.254/egress-proof:latest
