test/conformance/chainsaw/verify-images/clusterpolicy/standard/registry-egress-hard-block/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: registry-egress-hard-block
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  admission: true
  background: false
  failurePolicy: Fail
  webhookTimeoutSeconds: 10
  rules:
  - name: verify-blocked-registry
    match:
      any:
      - resources:
          kinds:
          - Pod
          selector:
            matchLabels:
              test.kyverno.io/registry-egress: hard-block
    verifyImages:
    - imageReferences:
      - '*'
      failureAction: Enforce
      required: true
      mutateDigest: true
      verifyDigest: true
      useCache: false
      attestors:
      - entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            signatureAlgorithm: sha256
            ctlog:
              ignoreSCT: true
            rekor:
              ignoreTlog: true
